--- a/package.json
+++ b/package.json
@@ -3,17 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "@apollo/react-hooks": "^3.1.3",
+    "@aws-amplify/api": "^2.1.5",
+    "@aws-amplify/auth": "^2.1.5",
+    "@aws-amplify/core": "^2.2.4",
+    "@material-ui/core": "^4.9.2",
+    "@reduxjs/toolkit": "^1.2.5",
+    "apollo-boost": "^0.4.7",
+    "formik": "^2.1.4",
+    "kepler.gl": "^1.1.13",
+    "notistack": "^0.9.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "7.1.3",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "typescript": "~3.7.2"
+    "react-use-measure": "^2.0.0",
+    "styled-components": "^5.0.1",
+    "yup": "^0.28.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,5 +42,19 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.0",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/styled-components": "^4.4.3",
+    "@types/yup": "^0.26.31",
+    "typescript": "~3.7.2"
   }
 }
