--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.1.4",
     "kepler.gl": "^1.1.13",
     "notistack": "^0.9.7",
+    "nuka-carousel": "^4.6.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "7.1.3",
