--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@aws-amplify/api": "^2.1.5",
     "@aws-amplify/auth": "^2.1.5",
     "@aws-amplify/core": "^2.2.4",
+    "@aws-amplify/storage": "^2.2.0",
     "@material-ui/core": "^4.9.2",
+    "@material-ui/icons": "^4.9.1",
     "@reduxjs/toolkit": "^1.2.5",
     "apollo-boost": "^0.4.7",
     "formik": "^2.1.4",
@@ -20,7 +22,9 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-use-measure": "^2.0.0",
+    "slugify": "^1.3.6",
     "styled-components": "^5.0.1",
+    "uuid": "^3.4.0",
     "yup": "^0.28.1"
   },
   "scripts": {
@@ -55,6 +59,7 @@
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^4.4.3",
+    "@types/uuid": "^3.4.7",
     "@types/yup": "^0.26.31",
     "typescript": "~3.7.2"
   }
