✨ finished initial create visualisation functionality. Including: - upload image, config, datasets - create vis - create config, dataset, attach to vis
Todo:
- refactor into smaller components
- maybe a hook for handling creation of visualisation
- retain data locally to hydrate next state without having to download
- make config and dataset creation parallel
- UI improvements - show loading, dataset upload progress, etc.
- attach visualisation to user

--- a/.graphqlconfig.yml
+++ b/.graphqlconfig.yml
@@ -1,14 +1,14 @@
 projects:
-  visualiseit:
+  geovisualiseit:
     schemaPath: src/graphql/schema.json
     includes:
-      - src/__generated__/*
+      - src/graphql/**/*.ts
     excludes:
       - ./amplify/**
     extensions:
       amplify:
         codeGenTarget: typescript
-        generatedFileName: src/__generated__/apiTypes.ts
+        generatedFileName: src/API.ts
         docsFilePath: src/graphql
 extensions:
   amplify:
