--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@material-ui/core": "^4.9.2",
     "@material-ui/icons": "^4.9.1",
     "@reduxjs/toolkit": "^1.2.5",
+    "@types/react-map-gl": "^5.2.0",
     "apollo-boost": "^0.4.7",
+    "aws-amplify": "^2.2.5",
+    "aws-amplify-react": "^3.1.6",
     "aws-appsync": "^3.0.2",
     "formik": "^2.1.4",
     "kepler.gl": "^1.1.13",
